Prevent CardIcons from being squished on mobile

--- a/src/app/styles/components/cards/CollegeCard.scss
+++ b/src/app/styles/components/cards/CollegeCard.scss
@@ -24,7 +24,10 @@
 
 .card_grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+  @include at-media(tablet-lg) {
+    grid-template-columns: 1fr 1fr;
+  }
   row-gap: 1rem;
   @include u-padding-y(2);
   @include u-margin-bottom(2)
